--- a/translations/fi.po
+++ b/translations/fi.po
@@ -698,3 +698,7 @@ msgstr "Linkki avautuu uuteen välilehteen"
 msgctxt "React search"
 msgid "An error occured while loading the content. Please reload page."
 msgstr "Sisällön lataamisessa tapahtui virhe. Kokeile ladata sivu uudelleen."
+
+msgctxt "Unit services title"
+msgid "Services"
+msgstr "Palvelut"
