UHF-9032: Fixed the accordion headings. Added translations.

--- a/translations/fi.po
+++ b/translations/fi.po
@@ -759,6 +759,18 @@ msgctxt "TPR unit contact information HSL Journey Planner link"
 msgid "Show the route in the HSL Journey Planner"
 msgstr "Näytä reitti HSL-reittioppaassa"
 
+msgctxt "TPR Unit tpr data accordion heading"
+msgid "Charges"
+msgstr "Hinnat"
+
+msgctxt "TPR Unit tpr data accordion heading"
+msgid "Other contact information"
+msgstr "Muut yhteystiedot"
+
+msgctxt "TPR Unit tpr data accordion heading"
+msgid "Further information"
+msgstr "Lisätiedot"
+
 msgctxt "Table of contents, no javascript"
 msgid "Table of contents requires JavaScript. Your browser doesn't support JavaScript or it is disabled. Please check your browser settings and try again."
 msgstr "Sisällysluettelo käyttää JavaScriptiä. Selaimesi ei tue JavaScriptiä tai se on pois käytöstä. Tarkista selaimesi asetukset ja yritä uudelleen."
