--- a/translations/fi.po
+++ b/translations/fi.po
@@ -718,3 +718,15 @@ msgstr "Palvelukieli"
 msgctxt "TPR unit contact information HSL Journey Planner link"
 msgid "Show the route in the HSL Journey Planner"
 msgstr "Näytä reitti HSL-reittioppaassa"
+
+msgctxt "TPR Unit tpr data accordion heading"
+msgid "Charges"
+msgstr "Hinnat"
+
+msgctxt "TPR Unit tpr data accordion heading"
+msgid "Other contact information"
+msgstr "Muut yhteystiedot"
+
+msgctxt "TPR Unit tpr data accordion heading"
+msgid "Further information"
+msgstr "Lisätiedot"
