--- a/translations/sv.po
+++ b/translations/sv.po
@@ -711,3 +711,15 @@ msgstr "Servicespråk"
 msgctxt "TPR unit contact information HSL Journey Planner link"
 msgid "Show the route in the HSL Journey Planner"
 msgstr "Visa rutten i HRT:s reseplaneraren"
+
+msgctxt "TPR Unit tpr data accordion heading"
+msgid "Charges"
+msgstr "Priser"
+
+msgctxt "TPR Unit tpr data accordion heading"
+msgid "Other contact information"
+msgstr "Andra kontaktuppgifter"
+
+msgctxt "TPR Unit tpr data accordion heading"
+msgid "Further information"
+msgstr "Ytterligare uppgifter"
