--- a/translations/sv.po
+++ b/translations/sv.po
@@ -711,3 +711,7 @@ msgstr "Servicespråk"
 msgctxt "TPR unit contact information HSL Journey Planner link"
 msgid "Show the route in the HSL Journey Planner"
 msgstr "Visa rutten i HRT:s reseplaneraren"
+
+msgctxt "Table of contents, no javascript"
+msgid "Table of contents requires JavaScript. Your browser doesn't support JavaScript or it is disabled. Please check your browser settings and try again."
+msgstr "Innehållsförteckning använder JavaScript. Din webbläsare stöder inte JavaScript eller det är inaktiverad. Kontrollera webbläsarens inställningar och försök igen."
