--- a/translations/fi.po
+++ b/translations/fi.po
@@ -834,3 +834,7 @@ msgstr "Tyhjennä valinnat"
 msgctxt "Job search no results message"
 msgid "Jobs meeting search criteria was not found. Try different search criteria."
 msgstr "Hakuehtoja vastaavia työpaikkoja ei löytynyt. Kokeile muita hakuehtoja."
+
+msgctxt "TPR Unit tpr data accordion heading"
+msgid "Contact details of daycare centre groups"
+msgstr "Päiväkotiryhmien yhteystiedot"
