--- a/translations/sv.po
+++ b/translations/sv.po
@@ -402,18 +402,6 @@ msgctxt "School search: input label"
 msgid "The child's home address"
 msgstr "Barnets hemadress"
 
-msgctxt "School search: results statline"
-msgid "schools"
-msgstr "skolor"
-
-msgctxt "School search: result display"
-msgid "Show the schools on a map"
-msgstr "Visa skolorna på kartan"
-
-msgctxt "School search: result display"
-msgid "Show schools as a list"
-msgstr "Visa skolorna som en lista"
-
 msgctxt "School search: language options"
 msgid "Language of instruction"
 msgstr "Undervisningsspråk"
@@ -843,3 +831,17 @@ msgstr "Om problemet kvarstår, gå till den kopian av sidorna."
 msgctxt "React search: location label"
 msgid "Address"
 msgstr "Adress"
+
+msgctxt "React search: schools result count"
+msgid "1 school"
+msgid_plural "@count school"
+msgstr[0] "1 skola"
+msgstr[1] "@count skolor"
+
+msgctxt "React search: result display"
+msgid "View as a list"
+msgstr "Visa som lista"
+
+msgctxt "React search: result display"
+msgid "View in a map"
+msgstr "Visa på kartan"
