--- a/translations/fi.po
+++ b/translations/fi.po
@@ -852,3 +852,7 @@ msgstr "Näytä listana"
 msgctxt "React search: result display"
 msgid "View in a map"
 msgstr "Näytä kartalla"
+
+msgctxt "School search: text input placeholder"
+msgid "E.g. Aurinkolahti Comprehensive School or 00990"
+msgstr "Esim. Aurinkolahden peruskoulu tai 00990"
