--- a/translations/sv.po
+++ b/translations/sv.po
@@ -833,10 +833,12 @@ msgid "Address"
 msgstr "Adress"
 
 msgctxt "React search: schools result count"
-msgid "1 school"
-msgid_plural "@count school"
-msgstr[0] "1 skola"
-msgstr[1] "@count skolor"
+msgid "@schools schools"
+msgstr "@schools skolor"
+
+msgctxt "React search: schools result count"
+msgid "@schools school"
+msgstr "@schools skola"
 
 msgctxt "React search: result display"
 msgid "View as a list"
