UHF-9269: Changed the context.

--- a/translations/sv.po
+++ b/translations/sv.po
@@ -851,3 +851,7 @@ msgstr "Visa på kartan"
 msgctxt "School search: text input placeholder"
 msgid "E.g. Aurinkolahti Comprehensive School or 00990"
 msgstr "t.ex. Grundskolan Aurinkolahden peruskoulu eller 00990"
+
+msgctxt "TPR unit service map link"
+msgid "View location on service map"
+msgstr "Visa plats på servicekartan"
