UHF-9202: New react search: Ploughing schedule

--- a/translations/fi.po
+++ b/translations/fi.po
@@ -858,3 +858,47 @@ msgstr "Näytä kartalla"
 msgctxt "School search: text input placeholder"
 msgid "E.g. Aurinkolahti Comprehensive School or 00990"
 msgstr "Esim. Aurinkolahden peruskoulu tai 00990"
+
+msgctxt "Ploughing schedule: Form title"
+msgid "See the ploughing schedule"
+msgstr "Katso aurausaikataulu"
+
+msgctxt "Ploughing schedule: Form description"
+msgid "Enter the name of your street to see an estimate of the street’s ploughing schedule."
+msgstr "Kirjoita kadunnimi ja saat arvion kadun aurauksesta."
+
+msgctxt "Ploughing schedule: Input label"
+msgid "Street name"
+msgstr "Kadunnimi"
+
+msgctxt "Ploughing schedule: Input placeholder"
+msgid "For example, Mannerheimintie"
+msgstr "Esim. Mannerheimintie"
+
+msgctxt "Ploughing schedule: Form submit"
+msgid "See the ploughing schedule"
+msgstr "Katso aurausaikataulu"
+
+msgctxt "Ploughing schedule: Class 1"
+msgid "We will plough the street by 7.00, if it has snowed in the evening or during the early hours of the night. If it snows between 4.00 and 18.00, we will plough the street within three hours of the end of the snowfall. Ploughing may be delayed if it snows a lot and for an extended period."
+msgstr "Auraamme kadun kello 7 mennessä aamulla, jos lunta on satanut illalla tai alkuyöllä. Kello 4–18 auraamme kadun 3 tunnin kuluessa lumisateen päättymisestä. Jos lunta sataa paljon ja pitkään, voi auraus viivästyä."
+
+msgctxt "Ploughing schedule: Class 2"
+msgid "We will plough the street by 7.00, if it has snowed in the evening or during the early hours of the night. If it snows between 4.00 and 17.00, we will plough the street within four hours of the end of the snowfall. Ploughing may be delayed if it snows a lot and for an extended period."
+msgstr "Auraamme kadun kello 7 mennessä aamulla, jos lunta on satanut illalla tai alkuyöllä. Kello 3–17 auraamme kadun 4 tunnin kuluessa lumisateen päättymisestä. Jos lunta sataa paljon ja pitkään, voi auraus viivästyä."
+
+msgctxt "Ploughing schedule: Class 3"
+msgid "We will plough the street within three business days. Ploughing may be delayed if it snows a lot and for an extended period."
+msgstr "Auraamme kadun kolmen arkivuorokauden kuluessa. Jos lunta sataa paljon ja pitkään, voi auraus viivästyä."
+
+msgctxt "Ploughing schedule: Multiple streets"
+msgid "The estimated ploughing schedules for the different parts of the street differ from each other. Below is the ploughing schedule for the longest part of the street."
+msgstr "Kadun eri osuuksilla on erilaiset tavoiteaikataulut auraukselle. Alla on kadun pisimmän osuuden aurausaikataulu."
+
+msgctxt "Ploughing schedule: Result title"
+msgid "Estimated ploughing schedule"
+msgstr "Arvioitu aurausaikataulu"
+
+msgctxt "Ploughing schedule: No search results description"
+msgid "No results were found for the criteria you entered. Try changing your search criteria."
+msgstr "Antamillasi valinnoilla ei löytynyt tuloksia. Voit kokeilla muuttaa hakuehtojasi."
