--- a/translations/sv.po
+++ b/translations/sv.po
@@ -851,3 +851,51 @@ msgstr "Visa på kartan"
 msgctxt "School search: text input placeholder"
 msgid "E.g. Aurinkolahti Comprehensive School or 00990"
 msgstr "t.ex. Grundskolan Aurinkolahden peruskoulu eller 00990"
+
+msgctxt "Ploughing schedule: Form title"
+msgid "See the ploughing schedule"
+msgstr "Se tidsplanen för plogning"
+
+msgctxt "Ploughing schedule: Form description"
+msgid "Enter the name of your street to see an estimate of the street’s ploughing schedule."
+msgstr "Skriv gatans namn och du får en uppskattning av när den plogas."
+
+### Placeholder. No translation yet.
+# msgctxt "Ploughing schedule: Input label"
+# msgid "Street name"
+# msgstr ""
+
+### Placeholder. No translation yet.
+# msgctxt "Ploughing schedule: Input placeholder"
+# msgid "For example, Mannerheimintie"
+# msgstr ""
+
+### Placeholder. No translation yet.
+# msgctxt "Ploughing schedule: Form submit"
+# msgid "See the ploughing schedule"
+# msgstr ""
+
+msgctxt "Ploughing schedule: Class 1"
+msgid "We will plough the street by 7.00, if it has snowed in the evening or during the early hours of the night. If it snows between 4.00 and 18.00, we will plough the street within three hours of the end of the snowfall. Ploughing may be delayed if it snows a lot and for an extended period."
+msgstr "Vi plogar gatan före klockan 7 på morgonen, om det har snöat på kvällen eller tidigt på natten. Klockan 4–18 plogar vi gatan inom 3 timmar från att snöfallet upphört.  Plogningen kan försenas om det snöar mycket och länge."
+
+msgctxt "Ploughing schedule: Class 2"
+msgid "We will plough the street by 7.00, if it has snowed in the evening or during the early hours of the night. If it snows between 4.00 and 17.00, we will plough the street within four hours of the end of the snowfall. Ploughing may be delayed if it snows a lot and for an extended period."
+msgstr "Vi plogar gatan före klockan 7 på morgonen, om det har snöat på kvällen eller tidigt på natten. Klockan 3–17 plogar vi gatan inom 4 timmar från att snöfallet upphört.  Plogningen kan försenas om det snöar mycket och länge."
+
+msgctxt "Ploughing schedule: Class 3"
+msgid "We will plough the street within three business days. Ploughing may be delayed if it snows a lot and for an extended period."
+msgstr "Vi plogar gatan inom tre vardagsdygn. Plogningen kan försenas om det snöar mycket och länge."
+
+msgctxt "Ploughing schedule: Multiple streets"
+msgid "The estimated ploughing schedules for the different parts of the street differ from each other. Below is the ploughing schedule for the longest part of the street."
+msgstr "Vi har olika mål för när olika avsnitt av gatan ska vara plogade. Nedan finns en tidsplan för plogning av gatans längsta avsnitt."
+
+msgctxt "Ploughing schedule: Result title"
+msgid "Estimated ploughing schedule"
+msgstr "Uppskattad tidsplan för plogning"
+
+### Placeholder. No translation yet.
+# msgctxt "Ploughing schedule: No search results description"
+# msgid "No results were found for the criteria you entered. Try changing your search criteria."
+# msgstr ""
