--- a/translations/fi.po
+++ b/translations/fi.po
@@ -893,7 +893,7 @@ msgctxt "TPR unit service map link"
 msgid "View location on service map"
 msgstr "Näytä sijainti palvelukartalla"
 
-msgctxt "Ploughing schedule: Form title"
+msgctxt "Ploughing schedule: Form title / submit"
 msgid "See the ploughing schedule"
 msgstr "Katso aurausaikataulu"
 
@@ -908,10 +908,6 @@ msgstr "Kadunnimi"
 msgctxt "Ploughing schedule: Input placeholder"
 msgid "For example, Mannerheimintie"
 msgstr "Esim. Mannerheimintie"
-
-msgctxt "Ploughing schedule: Form submit"
-msgid "See the ploughing schedule"
-msgstr "Katso aurausaikataulu"
 
 msgctxt "Ploughing schedule: Class 1"
 msgid "We will plough the street by 7.00, if it has snowed in the evening or during the early hours of the night. If it snows between 4.00 and 18.00, we will plough the street within three hours of the end of the snowfall. Ploughing may be delayed if it snows a lot and for an extended period."
