--- a/translations/fi.po
+++ b/translations/fi.po
@@ -910,16 +910,16 @@ msgid "For example, Mannerheimintie"
 msgstr "Esim. Mannerheimintie"
 
 msgctxt "Ploughing schedule: Class 1"
-msgid "We will plough the street by 7.00, if it has snowed in the evening or during the early hours of the night. If it snows between 4.00 and 18.00, we will plough the street within three hours of the end of the snowfall. Ploughing may be delayed if it snows a lot and for an extended period."
-msgstr "Auraamme kadun kello 7 mennessä aamulla, jos lunta on satanut illalla tai alkuyöllä. Kello 4–18 auraamme kadun 3 tunnin kuluessa lumisateen päättymisestä. Jos lunta sataa paljon ja pitkään, voi auraus viivästyä."
+msgid "<strong>We will plough the street by 7.00</strong>, if it has snowed in the evening or during the early hours of the night. If it snows between 4.00 and 18.00, we will plough the street within three hours of the end of the snowfall. Ploughing may be delayed if it snows a lot and for an extended period."
+msgstr "<strong>Auraamme kadun kello 7 mennessä aamulla</strong>, jos lunta on satanut illalla tai alkuyöllä. Kello 4–18 auraamme kadun 3 tunnin kuluessa lumisateen päättymisestä. Jos lunta sataa paljon ja pitkään, voi auraus viivästyä."
 
 msgctxt "Ploughing schedule: Class 2"
-msgid "We will plough the street by 7.00, if it has snowed in the evening or during the early hours of the night. If it snows between 4.00 and 17.00, we will plough the street within four hours of the end of the snowfall. Ploughing may be delayed if it snows a lot and for an extended period."
-msgstr "Auraamme kadun kello 7 mennessä aamulla, jos lunta on satanut illalla tai alkuyöllä. Kello 3–17 auraamme kadun 4 tunnin kuluessa lumisateen päättymisestä. Jos lunta sataa paljon ja pitkään, voi auraus viivästyä."
+msgid "<strong>We will plough the street by 7.00</strong>, if it has snowed in the evening or during the early hours of the night. If it snows between 4.00 and 17.00, we will plough the street within four hours of the end of the snowfall. Ploughing may be delayed if it snows a lot and for an extended period."
+msgstr "<strong>Auraamme kadun kello 7 mennessä aamulla</strong>, jos lunta on satanut illalla tai alkuyöllä. Kello 3–17 auraamme kadun 4 tunnin kuluessa lumisateen päättymisestä. Jos lunta sataa paljon ja pitkään, voi auraus viivästyä."
 
 msgctxt "Ploughing schedule: Class 3"
-msgid "We will plough the street within three business days. Ploughing may be delayed if it snows a lot and for an extended period."
-msgstr "Auraamme kadun kolmen arkivuorokauden kuluessa. Jos lunta sataa paljon ja pitkään, voi auraus viivästyä."
+msgid "<strong>We will plough the street within three business days</strong>. Ploughing may be delayed if it snows a lot and for an extended period."
+msgstr "<strong>Auraamme kadun kolmen arkivuorokauden kuluessa</strong>. Jos lunta sataa paljon ja pitkään, voi auraus viivästyä."
 
 msgctxt "Ploughing schedule: Multiple streets"
 msgid "The estimated ploughing schedules for the different parts of the street differ from each other. Below is the ploughing schedule for the longest part of the street."
