--- a/translations/sv.po
+++ b/translations/sv.po
@@ -832,19 +832,19 @@ msgctxt "Copy of site link for error pages"
 msgid "If the problem persist, go to the copy of the pages."
 msgstr "Om problemet kvarstår, gå till den kopian av sidorna."
 
-msgctxt "Health station search: input helper"
+msgctxt "React search: street input helper"
 msgid "Enter the street name and house number"
 msgstr "Ange gatunamnet och husnumret"
 
-msgctxt "Health station search: input placeholder"
+msgctxt "React search: street input helper placeholder"
 msgid "For example, Kotikatu 1"
 msgstr "T.ex. Hemgatan 1"
 
-msgctxt "Health station search: input label"
+msgctxt "React search: home address"
 msgid "Home address"
 msgstr "Hemadress"
 
-msgctxt "Health station search: checkbox label"
+msgctxt "React search: checkbox label swedish"
 msgid "Show the nearest service location where service is available in Swedish."
 msgstr "Visa det närmaste verksamhetsställe där man får betjäning på svenska."
 
@@ -853,6 +853,12 @@ msgid "1 health station"
 msgid_plural "@count health stations"
 msgstr[0] "1 hälsostation"
 msgstr[1] "@count hälsostation"
+
+msgctxt "Maternity and child health clinic search: result count"
+msgid "1 Maternity and child health clinic"
+msgid_plural "@count Maternity and child health clinics"
+msgstr[0] "1 rådgivningsbyrå"
+msgstr[1] "@count rådgivningsbyråar"
 
 msgctxt "Health station search: Service in Swedish tag"
 msgid "Service in Swedish"
